--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -29,7 +29,7 @@
           </li>
           <li>
               <a href="#" class="d-flex align-items-center">
-                  <i class="fas fa-search"></i>
+                  <i class="bi bi-search"></i>
                   <span class="menu-text">Search For Data</span>
               </a>
           </li>
@@ -64,24 +64,16 @@
               </a>
           </li>
           <li>
-              <a href="#" class="d-flex align-items-center">
+              <a href="/admin-setting" class="d-flex align-items-center">
                   <i class="bi bi-gear"></i>
                   <span class="menu-text">Admin Settings</span>
               </a>
           </li>
           <li>
-              <a href="#" class="d-flex align-items-center">
+              <a href="/user-control" class="d-flex align-items-center">
                   <i class="bi bi-person-gear"></i>
                   <span class="menu-text">User Control</span>
               </a>
           </li>
       </ul>
   </nav>
-  
-  <!-- Content -->
-  <div id="content">
-      <div class="container">
-          <h2>Content Area</h2>
-      </div>
-  </div>
-</div>
