--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -2,6 +2,8 @@
 
 .container-fluid{
     background-color: #009688;
+    position: fixed;
+    margin-top: 55px;
 }
 
 .navbar {
@@ -22,9 +24,6 @@
         padding: 10px;
         font-size: 1.25rem;
 
-        &:hover {
-        }
-
         i {
             padding: 10px;
             height: auto;
@@ -40,13 +39,15 @@
 }
 
 #sidebar {
-    width: 60px; 
+    width: 40px; 
     height: 100vh;
     background-color: white !important;
     transition: width 0.3s ease;
     position: fixed; 
+    margin-top: 55px;
     z-index: 100;
     overflow: hidden;
+    box-shadow: 2px 0 5px 0 #a9a9a9;
 
     ul {
         padding-left: 0;
@@ -55,7 +56,7 @@
         li {
             a {
                 color: #009688;
-                padding: 15px 10px;
+                padding: 10px 10px;
                 text-decoration: none;
                 display: flex;
                 align-items: center;
@@ -63,12 +64,8 @@
                 white-space: nowrap;
 
                 i {
-                    font-size: 1.5rem;
-                    margin-right: 10px; /*icon and text gap */
-                }
-
-                .menu-text {
-                    display: none; /* Initially hide the text */
+                    font-size: 1.1rem;
+                    margin-right: 12px; 
                 }
 
                 &:hover, &.active {
@@ -83,24 +80,11 @@
         width: 260px; 
         box-shadow: 5px 0 5px 0 #a9a9a9;
         .menu-text {
-            display: inline-block; /* Show text when expanded */
+            display: inline-block;
         }
-    }
-}
-
-#content {
-    margin-left: 60px;
-    padding: 20px;
-    width: calc(100% - 60px);
-    background-color: #d8d8d8;
-    min-height: 100vh;
-    transition: margin-left 0.3s ease;
-
-    #sidebar:hover ~ & {
-        margin-left: 60px;
-    }
-
-    .container {
-        padding: 20px;
+        li a .menu-text {
+            opacity: 1; 
+            transition: opacity 0.3s ease; 
+        }
     }
 }
