initial commit for user control and data reservation screens

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -52,7 +52,7 @@
               </a>
           </li>
           <li>
-              <a href="#" class="d-flex align-items-center">
+              <a href="/data-reservation" class="d-flex align-items-center">
                   <i class="bi bi-file-earmark-check"></i>
                   <span class="menu-text">Data Reservation</span>
               </a>
