changes for reports screen

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -58,9 +58,9 @@
               </a>
           </li>
           <li>
-              <a href="#" class="d-flex align-items-center">
+              <a routerLink="/reports" class="d-flex align-items-center">
                   <i class="bi bi-file-earmark-bar-graph"></i>
-                  <span class="menu-text">Reports</span>
+                  <span class="menu-text, text-success">Reports</span>
               </a>
           </li>
           <li>
@@ -72,8 +72,9 @@
           <li>
               <a href="/user-control" class="d-flex align-items-center">
                   <i class="bi bi-person-gear"></i>
-                  <span class="menu-text">User Control</span>
+                  <span class="menu-text, text-success" >User Control</span>
               </a>
           </li>
       </ul>
   </nav>
+  
