json server was implemented

--- a/src/app/admin-setting/admin-setting.component.html
+++ b/src/app/admin-setting/admin-setting.component.html
@@ -1,7 +1,7 @@
 
     <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
         <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="/TDM-AdminScreen/src/app/home/home.component.html">Home</a></li>
+        <li class="breadcrumb-item"><a href="/home">Home</a></li>
         <li class="breadcrumb-item active" aria-current="page">Admin Settings</li>
         </ol>
     </nav>
