--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -22,7 +22,7 @@
   <nav id="sidebar" class="bg-primary">
       <ul class="list-unstyled components">
           <li class="active">
-              <a href="#" class="d-flex align-items-center">
+              <a href="/home" class="d-flex align-items-center">
                   <i class="bi bi-house"></i>
                   <span class="menu-text">Home</span>
               </a>
