--- a/src/app/user-control/user-control.component.html
+++ b/src/app/user-control/user-control.component.html
@@ -1,6 +1,6 @@
 <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
     <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="/TDM-AdminScreen/src/app/home/home.component.html">Home</a></li>
+    <li class="breadcrumb-item"><a href="/home">Home</a></li>
     <li class="breadcrumb-item active" aria-current="page">User Control</li>
     </ol>
 </nav>
@@ -17,7 +17,7 @@
     </div>
     
     <div class="adduser">
-        <button (click)="openAddform()">Add User</button>
+        <button (click)="navigateToAddUser()">Add User</button>
     </div>
 </div>
 
@@ -78,7 +78,7 @@
 </div>
 
 
-<!-- Add Form Modal/Dialog -->
+<!-- Add Form Modal/Dialog 
 <div class="modal" *ngIf="showForm">
   <div class="modal-content">
     <h3>Add New User</h3>
@@ -157,4 +157,4 @@
     </form>
   </div>
 
-</div>
+</div>   -->
