themes updated for user control, admin sttings and data reservation.

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -46,12 +46,6 @@
               </a>
           </li>
           <li>
-              <a href="#" class="d-flex align-items-center">
-                  <i class="bi bi-file-earmark-fill"></i>
-                  <span class="menu-text">Litmus</span>
-              </a>
-          </li>
-          <li>
               <a href="/data-reservation" class="d-flex align-items-center">
                   <i class="bi bi-file-earmark-check"></i>
                   <span class="menu-text">Data Reservation</span>
@@ -60,7 +54,7 @@
           <li>
               <a routerLink="/reports" class="d-flex align-items-center">
                   <i class="bi bi-file-earmark-bar-graph"></i>
-                  <span class="menu-text, text-success">Reports</span>
+                  <span class="menu-text">Reports</span>
               </a>
           </li>
           <li>
@@ -72,7 +66,7 @@
           <li>
               <a href="/user-control" class="d-flex align-items-center">
                   <i class="bi bi-person-gear"></i>
-                  <span class="menu-text, text-success" >User Control</span>
+                  <span class="menu-text" >User Control</span>
               </a>
           </li>
       </ul>
