--- a/src/app/admin-setting/admin-setting.component.html
+++ b/src/app/admin-setting/admin-setting.component.html
@@ -30,7 +30,7 @@
             <div class="content">
                 <div class="setting-group">
                     <div class="setting-item left">
-                        <p>TENV1</p>
+                        <p>TENV 1</p>
                         <label class="switch">
                             <input type="checkbox">
                             <span class="slider">
@@ -39,7 +39,7 @@
                         </label>
                     </div>
                     <div class="setting-item center">
-                        <p>TENV1</p>
+                        <p>TENV 2</p>
                         <label class="switch">
                             <input type="checkbox">
                             <span class="slider">
@@ -48,7 +48,7 @@
                         </label>
                     </div>
                     <div class="setting-item right">
-                        <p>TENV1</p>
+                        <p>TENV E</p>
                         <label class="switch">
                             <input type="checkbox">
                             <span class="slider">
@@ -63,7 +63,7 @@
             <div class="content">
                 <div class="setting-group">
                     <div class="setting-item left">
-                        <p>TENV1</p>
+                        <p>TENV E</p>
                         <label class="switch">
                             <input type="checkbox">
                             <span class="slider">
@@ -72,7 +72,7 @@
                         </label>
                     </div>
                     <div class="setting-item center">
-                        <p>TENV1</p>
+                        <p>TENV B</p>
                         <label class="switch">
                             <input type="checkbox">
                             <span class="slider">
@@ -81,7 +81,7 @@
                         </label>
                     </div>
                     <div class="setting-item right">
-                        <p>TENV1</p>
+                        <p>TENV B</p>
                         <label class="switch">
                             <input type="checkbox">
                             <span class="slider">
@@ -96,7 +96,7 @@
             <div class="content">
                 <div class="setting-group">
                     <div class="setting-item left">
-                        <p>TENV1</p>
+                        <p>TENV B</p>
                         <label class="switch">
                             <input type="checkbox">
                             <span class="slider">
@@ -105,7 +105,7 @@
                         </label>
                     </div>
                     <div class="setting-item center">
-                        <p>TENV1</p>
+                        <p>TENV 1</p>
                         <label class="switch">
                             <input type="checkbox">
                             <span class="slider">
@@ -114,7 +114,7 @@
                         </label>
                     </div>
                     <div class="setting-item right">
-                        <p>TENV1</p>
+                        <p>TENV 2</p>
                         <label class="switch">
                             <input type="checkbox">
                             <span class="slider">
@@ -223,20 +223,7 @@
                 </div>
             </div>
     
-            <!-- Content 7 -->
-            <div class="content">
-                <div class="setting-group">
-                    <div class="setting-item left" style="gap: 25px;">
-                        <p>Copy Group</p>
-                        <label class="switch">
-                            <input type="checkbox">
-                            <span class="slider">
-                                <span class="switch-label"></span>
-                            </span>
-                        </label>
-                    </div>
-                </div>
-            </div>
+            
         </div>
     </div>
 
