--- a/src/app/reports/reports.component.html
+++ b/src/app/reports/reports.component.html
@@ -5,8 +5,7 @@
   </ol>
 </nav>
 <div class="reports-main">
-  <h1 class="reports"><u>Reports</u>
-
+  <h1 class="reports">Reports
   </h1>
   <div class="reports-container">
     <div class="grid-container">
@@ -17,14 +16,14 @@
             <div class="flex1">
               <div class="flex1 item">
                 <div class="flex-header">
-                  <p>No Of Test Data Requests Submitted Than The Tool Vs Service Now(During Transition)</p>
+                  <p>No Of Test Data Requests Submitted Thru The Tool Vs Service Now(During Transition)</p>
                 </div>
               </div>
               <div class="flex1 item">
                 <div class="flex-header">
                   <a href="#">
                     <button class="flex-item-button">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#009688"
+                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#66c"
                         class="bi bi-download" viewBox="0 0 16 16">
                         <path
                           d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5" />
@@ -43,21 +42,22 @@
             <div class="chart-container">
               <canvas baseChart [type]="'doughnut'" [data]="serviceNowDonutChart" [options]="donutChartOptions">
               </canvas>
-
             </div>
             </div>
           </div>
           <hr>
           <div class="report-card-flex-item">
             <div class="card-footer">
-              <a href="#">
-                <button class="button-with-icon">
-                  SEE DETAILS
-                  <svg xmlns="http://www.w3.org/2000/svg" height="16" width="16" viewBox="0 0 16 16">
-                      <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" stroke="currentColor" stroke-width="2"/>
-                  </svg>
-                </button>
-              </a>
+               <a (click)="OnNavigate()">
+                    <button class="button-with-icon">
+                     SEE DETAILS
+                     <span class="caret" (click)="toggleCaret()">
+                      <svg width="10" height="10" viewBox="0 0 10 10" [ngClass]="{'rotated': isOpen}" fill="#000000" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 3L5 8L10 3H0Z"/>
+                      </svg>
+                    </span>                              
+                   </button>
+               </a>
             </div>
           </div>
         </div>
@@ -76,7 +76,7 @@
       <div class="flex-header">
         <a href="#">
           <button class="flex-item-button">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#009688"
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#66c"
               class="bi bi-download" viewBox="0 0 16 16">
               <path
                 d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5" />
@@ -98,7 +98,7 @@
               <option *ngFor="let month of months" [value]="month">{{ month }}</option>
             </select>
           </div>
-          <canvas baseChart [type]="'line'" [data]="dataRequestsLineChart" [options]="lineChartOptions">
+          <canvas baseChart [type]="'line'" [data]="dataRequestsLineChart" [options]="lineChartOptions" height="220px">
           </canvas>
         </div>
       </div>
@@ -109,9 +109,11 @@
           <a href="#">
             <button class="button-with-icon">
               SEE DETAILS
-              <svg xmlns="http://www.w3.org/2000/svg" height="16" width="16" viewBox="0 0 16 16">
-                  <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" stroke="currentColor" stroke-width="2"/>
-              </svg>
+              <span class="caret" (click)="toggleCaret()">
+                <svg width="10" height="10" viewBox="0 0 10 10" [ngClass]="{'rotated': isOpen}" fill="#000000" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M0 3L5 8L10 3H0Z"/>
+                </svg>
+              </span>                           
             </button>
           </a>
         </div>
@@ -133,7 +135,7 @@
       <div class="flex-header">
         <a href="#">
           <button class="flex-item-button">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#009688"
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#66c"
               class="bi bi-download" viewBox="0 0 16 16">
               <path
                 d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5" />
@@ -161,9 +163,11 @@
           <a href="#">
             <button class="button-with-icon">
               SEE DETAILS
-              <svg xmlns="http://www.w3.org/2000/svg" height="16" width="16" viewBox="0 0 16 16">
-                  <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" stroke="currentColor" stroke-width="2"/>
-              </svg>
+              <span class="caret" (click)="toggleCaret()">
+                <svg width="10" height="10" viewBox="0 0 10 10" [ngClass]="{'rotated': isOpen}" fill="#000000" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M0 3L5 8L10 3H0Z"/>
+                </svg>
+              </span>                          
             </button>
           </a>
         </div>
@@ -184,7 +188,7 @@
       <div class="flex-header">
         <a href="#">
           <button class="flex-item-button">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#009688"
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#66c"
               class="bi bi-download" viewBox="0 0 16 16">
               <path
                 d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5" />
@@ -212,9 +216,11 @@
           <a href="#">
             <button class="button-with-icon">
               SEE DETAILS
-              <svg xmlns="http://www.w3.org/2000/svg" height="16" width="16" viewBox="0 0 16 16">
-                  <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" stroke="currentColor" stroke-width="2"/>
-              </svg>
+              <span class="caret" (click)="toggleCaret()">
+                <svg width="10" height="10" viewBox="0 0 10 10" [ngClass]="{'rotated': isOpen}" fill="#000000" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M0 3L5 8L10 3H0Z"/>
+                </svg>
+              </span>                          
             </button>
           </a>
         </div>
@@ -236,7 +242,7 @@
       <div class="flex-header">
         <a href="#">
           <button class="flex-item-button">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#009688"
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#66c"
               class="bi bi-download" viewBox="0 0 16 16">
               <path
                 d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5" />
@@ -264,9 +270,11 @@
           <a href="#">
             <button class="button-with-icon">
               SEE DETAILS
-              <svg xmlns="http://www.w3.org/2000/svg" height="16" width="16" viewBox="0 0 16 16">
-                  <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" stroke="currentColor" stroke-width="2"/>
-              </svg>
+              <span class="caret" (click)="toggleCaret()">
+                <svg width="10" height="10" viewBox="0 0 10 10" [ngClass]="{'rotated': isOpen}" fill="#000000" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M0 3L5 8L10 3H0Z"/>
+                </svg>
+              </span>                          
             </button>
           </a>
         </div>
@@ -287,7 +295,7 @@
       <div class="flex-header">
         <a href="#">
           <button class="flex-item-button">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#009688"
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#66c"
               class="bi bi-download" viewBox="0 0 16 16">
               <path
                 d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5" />
@@ -315,9 +323,11 @@
           <a href="#">
             <button class="button-with-icon">
               SEE DETAILS
-              <svg xmlns="http://www.w3.org/2000/svg" height="16" width="16" viewBox="0 0 16 16">
-                  <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" stroke="currentColor" stroke-width="2"/>
-              </svg>
+              <span class="caret" (click)="toggleCaret()">
+                <svg width="10" height="10" viewBox="0 0 10 10" [ngClass]="{'rotated': isOpen}" fill="#000000" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M0 3L5 8L10 3H0Z"/>
+                </svg>
+              </span>                         
             </button>
           </a>
         </div>
@@ -339,7 +349,7 @@
       <div class="flex-header">
         <a href="#">
           <button class="flex-item-button">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#009688"
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#66c"
               class="bi bi-download" viewBox="0 0 16 16">
               <path
                 d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5" />
@@ -361,7 +371,7 @@
               <option *ngFor="let month of months" [value]="month">{{ month }}</option>
             </select>
           </div>
-          <canvas baseChart [type]="'line'" [data]="dataRequestsLineChart" [options]="lineChartOptions">
+          <canvas baseChart [type]="'line'" [data]="dataRequestsLineChart" [options]="lineChartOptions" height="220px">
           </canvas>
         </div>
       </div>
@@ -372,9 +382,11 @@
           <a href="#">
             <button class="button-with-icon">
               SEE DETAILS
-              <svg xmlns="http://www.w3.org/2000/svg" height="16" width="16" viewBox="0 0 16 16">
-                  <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" stroke="currentColor" stroke-width="2"/>
-              </svg>
+              <span class="caret" (click)="toggleCaret()">
+                <svg width="10" height="10" viewBox="0 0 10 10" [ngClass]="{'rotated': isOpen}" fill="#000000" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M0 3L5 8L10 3H0Z"/>
+                </svg>
+              </span>                           
             </button>
           </a>
         </div>
@@ -395,7 +407,7 @@
       <div class="flex-header">
         <a href="#">
           <button class="flex-item-button">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#009688"
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#66c"
               class="bi bi-download" viewBox="0 0 16 16">
               <path
                 d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5" />
@@ -424,10 +436,12 @@
         <div class="card-footer">
           <a href="#">
             <button class="button-with-icon">
-              SEE DETAILS
-              <svg xmlns="http://www.w3.org/2000/svg" height="16" width="16" viewBox="0 0 16 16">
-                  <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" stroke="currentColor" stroke-width="2"/>
-              </svg>
+              SEE MORE
+              <span class="caret" (click)="toggleCaret()">
+                <svg width="10" height="10" viewBox="0 0 10 10" [ngClass]="{'rotated': isOpen}" fill="#000000" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M0 3L5 8L10 3H0Z"/>
+                </svg>
+              </span>                           
             </button>
           </a>
         </div>
