--- a/src/app/user-control/user-control.component.html
+++ b/src/app/user-control/user-control.component.html
@@ -17,7 +17,7 @@
     </div>
     
     <div class="adduser">
-        <button (click)="navigateToAddUser()">Add User</button>
+        <button >Add User</button>
     </div>
 </div>
 
